appId: com.mentalassistant
---
- runFlow: '../login/login.yaml'
- tapOn: 'Settings'
- tapOn: ' Light mode'
- assertVisible: ' Dark mode'
- stopApp
- launchApp
- assertVisible: 'Settings'
- tapOn:
    text: 'Settings'
- assertVisible: ' Dark mode'
